--- a/index.html
+++ b/index.html
@@ -1,35 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daily Tuition</title>
-
-
-    <!--  font awesome icons  -->
-    <link rel="stylesheet" href="./css/all.min.css">
-
-    <!--  custom css file  -->
-    <link rel="stylesheet" href="./css/style.css">
-
-    <!--  Responsive css file  -->
-    <link rel="stylesheet" href="./css/responsive.css">
-
-</head>
-
-<body>
-
-    
-
-    <!--  Jquery js file  -->
-    <script src="./js/jquery.3.4.1.js"></script>
-
-    <!--  custom js file  -->
-    <script src="./js/main.js"></script>
-
-
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>HTML CSS Admin dashboard</title>
+        <!--  font awesome icons  -->
+        <link rel="stylesheet" href="./css/all.min.css">
+        <!--  custom css file  -->
+        <link rel="stylesheet" href="./css/style.css">
+        <!--  Responsive css file  -->
+        <link rel="stylesheet" href="./css/responsive.css">
+    </head>
+    <body>
+        <input type="checkbox" id="checkbox_toggel">
+        <div class="left_side">
+            <div class="brand">
+                <h2><span class="braket">[</span> Brand Logo<span class="braket">]</span></h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li class="navigation">NAVIGATION</li>
+                    <li><a class="dashbord" href="#"><i class="fas fa-home"></i><span> Dashboard</span></a></li>
+                    <li><a href="#"><i class="far fa-envelope"></i> <span>Mailbox</span></a></li>
+                    <li><a href="#"><i class="far fa-address-card"></i> <span>Cards & Widgets</span></a></li>
+                    <li><a href="#"><i class="fab fa-elementor"></i> <span>UI Elements</span></a></li>
+                    <li><a href="#"><i class="fas fa-directions"></i> <span>Navigation</span></a></li>
+                    <li><a href="#"><i class="far fa-chart-bar"></i> <span>Charts</span></a></li>
+                    <li><a href="#"><i class="fas fa-cogs"></i> <span>Forms</span></a></li>
+                    <li><a href="#"><i class="fas fa-map-marked-alt"></i> <span>Maps</span></a></li>
+                    <li><a href="#"><i class="fab fa-adn"></i> <span>Utilities</span></a></li>
+                    <li><a href="#"><i class="fab fa-app-store-ios"></i> <span>Apps & Pages</span></a></li>
+                    <li><a href="#"><i class="fas fa-layer-group"></i> <span>Layouts</span></a></li>
+                    <li><a href="#"><i class="fas fa-sitemap"></i> <span>Sitemap</span></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="right_side">
+            <div class="header">
+                <div class="ham_menu">
+                    <div>
+                        <label for="checkbox_toggel" class="" >
+                            <i class="fas fa-bars"></i>
+                        </label>
+                    </div>
+                    <div>
+                        <h4>Dashbord</h4>
+                    </div>
+                </div>
+                <div class="search">
+                    <input type="text" name="" placeholder="Search">
+                    <i class="fas fa-search"></i>
+                </div>
+                <div class="notification">
+                    <ul>
+                        <li><i class="far fa-envelope"></i></li>
+                        <li><i class="far fa-bell"></i></li>
+                    </ul>
+                </div>
+                <div class="profile">
+                    <div>
+                        <img src="img/Md Ashique Abdullah.jpg" alt="">
+                    </div>
+                    <div>
+                        <h3>Ashique Abdullah</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--  Jquery js file  -->
+        <script src="./js/jquery.3.4.1.js"></script>
+        <!--  custom js file  -->
+        <script src="./js/main.js"></script>
+    </body>
 </html>
