--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <input type="checkbox" id="checkbox_toggel">
         <div class="left_side">
             <div class="brand">
+                <label for="checkbox_toggel" class="" >
+                    <i class="fas fa-bars"></i>
+                </label>
                 <h2><span class="braket">[</span> Brand Logo<span class="braket">]</span></h2>
+                
             </div>
             <div class="menu">
                 <ul>
@@ -66,6 +70,11 @@
                         <h3>Ashique Abdullah</h3>
                         <p>Web Developer</p>
                     </div>
+                </div>
+            </div>
+            <div class="main_area">
+                <div class="card">
+                    <p>as</p>
                 </div>
             </div>
         </div>
